workspace_check_3.log
warning: struct `McpProtocol` is never constructed
  --> meerkat-mcp-client/src/protocol.rs:16:12
   |
16 | pub struct McpProtocol {
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated items `new`, `server_info`, `list_tools`, `call_tool_text`, and `close` are never used
  --> meerkat-mcp-client/src/protocol.rs:21:12
   |
20 | impl McpProtocol {
   | ---------------- associated items in this implementation
21 |     pub fn new(service: RunningService<RoleClient, ()>) -> Self {
   |            ^^^
...
25 |     pub fn server_info(&self) -> Option<&rmcp::model::ServerInfo> {
   |            ^^^^^^^^^^^
...
29 |     pub async fn list_tools(&self) -> Result<Vec<ToolDef>, McpError> {
   |                  ^^^^^^^^^^
...
57 |     pub async fn call_tool_text(&self, name: &str, args: &Value) -> Resul...
   |                  ^^^^^^^^^^^^^^
...
86 |     pub async fn close(self) -> Result<(), McpError> {
   |                  ^^^^^

warning: function `extract_text_content_strict` is never used
  --> meerkat-mcp-client/src/protocol.rs:97:4
   |
97 | fn extract_text_content_strict(contents: Vec<Content>) -> Result<String, ...
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `meerkat-mcp-client` (lib) generated 3 warnings
warning: `meerkat-mcp-client` (lib test) generated 2 warnings (2 duplicates)
warning: function `description` is never used
  --> meerkat-tools/src/builtin/sub_agent/spawn.rs:37:12
   |
37 |     pub fn description() -> String {
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `meerkat-tools` (lib) generated 1 warning
warning: `meerkat-tools` (lib test) generated 1 warning (1 duplicate)
    Checking meerkat v0.1.0 (/Users/luka/src/raik/meerkat)
error[E0433]: failed to resolve: use of undeclared type `LlmFailureReason`
   --> meerkat/examples/comms_verbose.rs:137:56
    |
137 |                     return Err(AgentError::llm("test", LlmFailureReason::ProviderError, e.to_string()));
    |                                                        ^^^^^^^^^^^^^^^^ use of undeclared type `LlmFailureReason`
    |
help: consider importing this enum
    |
4   + use meerkat_core::error::LlmFailureReason;
    |

warning: unused variable: `secret_a`
   --> meerkat/examples/comms_verbose.rs:298:9
    |
298 |     let secret_a = comms_manager_a.keypair().secret_bytes();
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_secret_a`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `secret_b`
   --> meerkat/examples/comms_verbose.rs:299:9
    |
299 |     let secret_b = comms_manager_b.keypair().secret_bytes();
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_secret_b`

For more information about this error, try `rustc --explain E0433`.
warning: `meerkat` (example "comms_verbose") generated 2 warnings
error: could not compile `meerkat` (example "comms_verbose") due to 1 previous error; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
